--- a/false.html
+++ b/false.html
@@ -59,7 +59,7 @@
     <hr> <!-- adjunta una línea para separar textos-->
     <footer> <!-- este es el pie de página-->
         <div> <!-- este es la etiqueta para cosas que ocupan todo la pantalla-->
-            <center><p><strong>Logo</strong></p></center>
+                <p>Logo</p>
         </div>
         <nav> <!-- listado de redes sociales con hipervinculo-->
             <ul>
@@ -67,6 +67,7 @@
                     <li>Facebook</li>
                     <li>Instagram</li>
                     <li>Twitter</li>
+                    <li>FACEBOOKKK</li> <!--Hola, este es un comentario-->
                 </span>
             </ul>
         </nav>
