--- a/false.html
+++ b/false.html
@@ -33,7 +33,7 @@
                             <li>Sobre nosotros</li>
                             <li>Emprendimientos</li>
                             <li>Planes</li>
-                            <li>Precios</li>
+                            <li>Precios_l</li>
                     </ol>
             </nav> 
         </span>
